--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-.apod_block {
-    max-height: 100vh;
+.row__centered {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+}
+
+.figure__apod_image {
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
 }
